--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -666,6 +666,30 @@ video {
   left: 7.5rem;
 }
 
+.left-\[10rem\] {
+  left: 10rem;
+}
+
+.left-\[2rem\] {
+  left: 2rem;
+}
+
+.left-\[8rem\] {
+  left: 8rem;
+}
+
+.left-\[8\.5rem\] {
+  left: 8.5rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
 .z-40 {
   z-index: 40;
 }
@@ -822,6 +846,18 @@ video {
   height: 0.75rem;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[100vw\] {
+  height: 100vw;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .max-h-\[13\.7rem\] {
   max-height: 13.7rem;
 }
@@ -896,6 +932,46 @@ video {
 
 .w-\[75\%\] {
   width: 75%;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[10vw\] {
+  width: 10vw;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
+}
+
+.w-\[35rem\] {
+  width: 35rem;
+}
+
+.w-\[20rem\] {
+  width: 20rem;
+}
+
+.w-\[24rem\] {
+  width: 24rem;
+}
+
+.w-\[22rem\] {
+  width: 22rem;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.w-\[105vw\] {
+  width: 105vw;
+}
+
+.w-\[110vw\] {
+  width: 110vw;
 }
 
 .max-w-full {
@@ -1193,6 +1269,14 @@ video {
   border-width: 2px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
+.border-8 {
+  border-width: 8px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1314,6 +1398,28 @@ video {
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.2\)\] {
+  background-color: rgba(0,0,0,0.2);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.9\)\] {
+  background-color: rgba(0,0,0,0.9);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.bg-purple-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1324,6 +1430,14 @@ video {
 
 .bg-gradient-to-tl {
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
 .from-logo-pink {
@@ -1341,6 +1455,41 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(167, 243, 208, 0));
 }
 
+.from-red-300 {
+  --tw-gradient-from: #fca5a5;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(252, 165, 165, 0));
+}
+
+.from-yellow-300 {
+  --tw-gradient-from: #fcd34d;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(252, 211, 77, 0));
+}
+
+.from-purple-200 {
+  --tw-gradient-from: #ddd6fe;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(221, 214, 254, 0));
+}
+
+.from-purple-500 {
+  --tw-gradient-from: #8b5cf6;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(139, 92, 246, 0));
+}
+
+.from-purple-400 {
+  --tw-gradient-from: #a78bfa;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(167, 139, 250, 0));
+}
+
+.from-\[\#34e89e\] {
+  --tw-gradient-from: #34e89e;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(52, 232, 158, 0));
+}
+
+.from-\[\#5C258D\] {
+  --tw-gradient-from: #5C258D;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(92, 37, 141, 0));
+}
+
 .to-logo-orange {
   --tw-gradient-to: #F89B29;
 }
@@ -1351,6 +1500,34 @@ video {
 
 .to-yellow-100 {
   --tw-gradient-to: #fef3c7;
+}
+
+.to-green-200 {
+  --tw-gradient-to: #a7f3d0;
+}
+
+.to-red-200 {
+  --tw-gradient-to: #fecaca;
+}
+
+.to-yellow-200 {
+  --tw-gradient-to: #fde68a;
+}
+
+.to-red-400 {
+  --tw-gradient-to: #f87171;
+}
+
+.to-\[\#0f3443\] {
+  --tw-gradient-to: #0f3443;
+}
+
+.to-\[\#4389A2\] {
+  --tw-gradient-to: #4389A2;
+}
+
+.bg-clip-border {
+  background-clip: border-box;
 }
 
 .bg-clip-text {
@@ -1368,6 +1545,10 @@ video {
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-6 {
@@ -1557,6 +1738,18 @@ video {
   padding-top: 0.5rem;
 }
 
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1717,6 +1910,51 @@ video {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgba(16, 185, 129, var(--tw-text-opacity));
+}
+
+.text-pink-700 {
+  --tw-text-opacity: 1;
+  color: rgba(190, 24, 93, var(--tw-text-opacity));
+}
+
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgba(4, 120, 87, var(--tw-text-opacity));
+}
+
+.text-yellow-700 {
+  --tw-text-opacity: 1;
+  color: rgba(180, 83, 9, var(--tw-text-opacity));
+}
+
+.text-pink-300 {
+  --tw-text-opacity: 1;
+  color: rgba(249, 168, 212, var(--tw-text-opacity));
+}
+
+.text-green-300 {
+  --tw-text-opacity: 1;
+  color: rgba(110, 231, 183, var(--tw-text-opacity));
+}
+
+.text-yellow-300 {
+  --tw-text-opacity: 1;
+  color: rgba(252, 211, 77, var(--tw-text-opacity));
+}
+
+.text-pink-400 {
+  --tw-text-opacity: 1;
+  color: rgba(244, 114, 182, var(--tw-text-opacity));
+}
+
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgba(52, 211, 153, var(--tw-text-opacity));
 }
 
 .underline {
@@ -2174,6 +2412,10 @@ video {
     height: 15rem;
   }
 
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
   .md\:w-52 {
     width: 13rem;
   }
@@ -2184,6 +2426,14 @@ video {
 
   .md\:w-\[60\%\] {
     width: 60%;
+  }
+
+  .md\:w-\[35rem\] {
+    width: 35rem;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
   }
 
   .md\:max-w-sm {
@@ -2198,8 +2448,18 @@ video {
     max-width: 48rem;
   }
 
+  .md\:scale-100 {
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transform: var(--tw-transform);
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
   }
 
   .md\:items-end {
@@ -2270,6 +2530,11 @@ video {
     line-height: 1.75rem;
   }
 
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .md\:shadow-none {
     --tw-shadow: 0 0 #0000;
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2318,6 +2583,46 @@ video {
     left: 12rem;
   }
 
+  .lg\:left-52 {
+    left: 13rem;
+  }
+
+  .lg\:left-64 {
+    left: 16rem;
+  }
+
+  .lg\:left-60 {
+    left: 15rem;
+  }
+
+  .lg\:left-\[20rem\] {
+    left: 20rem;
+  }
+
+  .lg\:left-\[10rem\] {
+    left: 10rem;
+  }
+
+  .lg\:left-\[15rem\] {
+    left: 15rem;
+  }
+
+  .lg\:left-\[14rem\] {
+    left: 14rem;
+  }
+
+  .lg\:left-\[14\.4rem\] {
+    left: 14.4rem;
+  }
+
+  .lg\:left-\[14\.6rem\] {
+    left: 14.6rem;
+  }
+
+  .lg\:left-\[14\.7rem\] {
+    left: 14.7rem;
+  }
+
   .lg\:mr-10 {
     margin-right: 2.5rem;
   }
@@ -2340,6 +2645,14 @@ video {
 
   .lg\:w-\[10rem\] {
     width: 10rem;
+  }
+
+  .lg\:w-\[40rem\] {
+    width: 40rem;
+  }
+
+  .lg\:w-\[35rem\] {
+    width: 35rem;
   }
 
   .lg\:scale-100 {
