--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -666,28 +666,12 @@ video {
   left: 7.5rem;
 }
 
-.left-\[10rem\] {
-  left: 10rem;
-}
-
-.left-\[2rem\] {
-  left: 2rem;
-}
-
-.left-\[8rem\] {
-  left: 8rem;
+.top-4 {
+  top: 1rem;
 }
 
 .left-\[8\.5rem\] {
   left: 8.5rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
-.top-4 {
-  top: 1rem;
 }
 
 .z-40 {
@@ -724,6 +708,21 @@ video {
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mt-6 {
@@ -846,18 +845,6 @@ video {
   height: 0.75rem;
 }
 
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-\[100vw\] {
-  height: 100vw;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
-}
-
 .max-h-\[13\.7rem\] {
   max-height: 13.7rem;
 }
@@ -910,6 +897,18 @@ video {
   width: 8rem;
 }
 
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.w-\[22rem\] {
+  width: 22rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -922,56 +921,12 @@ video {
   width: 85%;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
 .w-full {
   width: 100%;
 }
 
 .w-\[75\%\] {
   width: 75%;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-\[10vw\] {
-  width: 10vw;
-}
-
-.w-\[90vw\] {
-  width: 90vw;
-}
-
-.w-\[35rem\] {
-  width: 35rem;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[24rem\] {
-  width: 24rem;
-}
-
-.w-\[22rem\] {
-  width: 22rem;
-}
-
-.w-\[100vw\] {
-  width: 100vw;
-}
-
-.w-\[105vw\] {
-  width: 105vw;
-}
-
-.w-\[110vw\] {
-  width: 110vw;
 }
 
 .max-w-full {
@@ -1249,10 +1204,6 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1261,24 +1212,12 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .border {
   border-width: 1px;
 }
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-4 {
-  border-width: 4px;
-}
-
-.border-8 {
-  border-width: 8px;
 }
 
 .border-b-2 {
@@ -1383,8 +1322,8 @@ video {
   background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
-  background-color: rgba(0,0,0,0.7);
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
+  background-color: rgba(0,0,0,0.8);
 }
 
 .bg-gray-300 {
@@ -1402,83 +1341,20 @@ video {
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.2\)\] {
-  background-color: rgba(0,0,0,0.2);
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.9\)\] {
-  background-color: rgba(0,0,0,0.9);
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
-  background-color: rgba(0,0,0,0.8);
-}
-
-.bg-purple-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
-}
-
-.bg-green-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
-}
-
-.bg-pink-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(219, 39, 119, var(--tw-bg-opacity));
-}
-
-.bg-yellow-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(146, 64, 14, var(--tw-bg-opacity));
-}
-
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
-}
-
-.bg-yellow-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.bg-gradient-to-l {
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-tl {
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-tr {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-bl {
-  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-l {
-  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-logo-pink {
@@ -1491,39 +1367,9 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
 }
 
-.from-green-200 {
-  --tw-gradient-from: #a7f3d0;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(167, 243, 208, 0));
-}
-
-.from-red-300 {
-  --tw-gradient-from: #fca5a5;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(252, 165, 165, 0));
-}
-
-.from-yellow-300 {
-  --tw-gradient-from: #fcd34d;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(252, 211, 77, 0));
-}
-
-.from-purple-200 {
-  --tw-gradient-from: #ddd6fe;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(221, 214, 254, 0));
-}
-
-.from-purple-500 {
-  --tw-gradient-from: #8b5cf6;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(139, 92, 246, 0));
-}
-
-.from-purple-400 {
-  --tw-gradient-from: #a78bfa;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(167, 139, 250, 0));
-}
-
-.from-\[\#34e89e\] {
-  --tw-gradient-from: #34e89e;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(52, 232, 158, 0));
+.from-purple-900 {
+  --tw-gradient-from: #4c1d95;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(76, 29, 149, 0));
 }
 
 .from-\[\#5C258D\] {
@@ -1531,94 +1377,9 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(92, 37, 141, 0));
 }
 
-.from-\[\#fc00ff\] {
-  --tw-gradient-from: #fc00ff;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(252, 0, 255, 0));
-}
-
-.from-\[\#C33764\] {
-  --tw-gradient-from: #C33764;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(195, 55, 100, 0));
-}
-
-.from-\[\#F0CB35\] {
-  --tw-gradient-from: #F0CB35;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(240, 203, 53, 0));
-}
-
-.from-\[\#A5FECB\] {
-  --tw-gradient-from: #A5FECB;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(165, 254, 203, 0));
-}
-
-.from-\[\#20BDFF\] {
-  --tw-gradient-from: #20BDFF;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(32, 189, 255, 0));
-}
-
-.from-\[\#38ef7d\] {
-  --tw-gradient-from: #38ef7d;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(56, 239, 125, 0));
-}
-
-.from-red-800 {
-  --tw-gradient-from: #991b1b;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(153, 27, 27, 0));
-}
-
-.from-\[\#67B26F\] {
-  --tw-gradient-from: #67B26F;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(103, 178, 111, 0));
-}
-
-.from-\[\#EB5757\] {
-  --tw-gradient-from: #EB5757;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(235, 87, 87, 0));
-}
-
-.from-\[\#ad5389\] {
-  --tw-gradient-from: #ad5389;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(173, 83, 137, 0));
-}
-
-.from-yellow-500 {
-  --tw-gradient-from: #f59e0b;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(245, 158, 11, 0));
-}
-
-.from-yellow-200 {
-  --tw-gradient-from: #fde68a;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(253, 230, 138, 0));
-}
-
-.from-\[\#59C173\] {
-  --tw-gradient-from: #59C173;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(89, 193, 115, 0));
-}
-
-.from-\[\#FFB75E\] {
-  --tw-gradient-from: #FFB75E;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(255, 183, 94, 0));
-}
-
-.from-\[\#feb47b\] {
-  --tw-gradient-from: #feb47b;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(254, 180, 123, 0));
-}
-
-.from-\[\#fee140\] {
-  --tw-gradient-from: #fee140;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(254, 225, 64, 0));
-}
-
-.from-\[\#1D2671\] {
-  --tw-gradient-from: #1D2671;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(29, 38, 113, 0));
-}
-
-.from-purple-900 {
-  --tw-gradient-from: #4c1d95;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(76, 29, 149, 0));
+.from-green-200 {
+  --tw-gradient-from: #a7f3d0;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(167, 243, 208, 0));
 }
 
 .to-logo-orange {
@@ -1629,160 +1390,16 @@ video {
   --tw-gradient-to: #f59e0b;
 }
 
-.to-yellow-100 {
-  --tw-gradient-to: #fef3c7;
-}
-
-.to-green-200 {
-  --tw-gradient-to: #a7f3d0;
-}
-
-.to-red-200 {
-  --tw-gradient-to: #fecaca;
-}
-
-.to-yellow-200 {
-  --tw-gradient-to: #fde68a;
-}
-
-.to-red-400 {
-  --tw-gradient-to: #f87171;
-}
-
-.to-\[\#0f3443\] {
-  --tw-gradient-to: #0f3443;
+.to-\[\#C33764\] {
+  --tw-gradient-to: #C33764;
 }
 
 .to-\[\#4389A2\] {
   --tw-gradient-to: #4389A2;
 }
 
-.to-\[\#00dbde\] {
-  --tw-gradient-to: #00dbde;
-}
-
-.to-\[\#1D2671\] {
-  --tw-gradient-to: #1D2671;
-}
-
-.to-\[\#C02425\] {
-  --tw-gradient-to: #C02425;
-}
-
-.to-\[\#5433FF\] {
-  --tw-gradient-to: #5433FF;
-}
-
-.to-\[\#\#11998e\] {
-  --tw-gradient-to: ##11998e;
-}
-
-.to-\[\#11998e\] {
-  --tw-gradient-to: #11998e;
-}
-
-.to-blue-700 {
-  --tw-gradient-to: #1d4ed8;
-}
-
-.to-green-400 {
-  --tw-gradient-to: #34d399;
-}
-
-.to-\[\#4ca2cd\] {
-  --tw-gradient-to: #4ca2cd;
-}
-
-.to-\[\#000000\] {
-  --tw-gradient-to: #000000;
-}
-
-.to-\[\#3c1053\] {
-  --tw-gradient-to: #3c1053;
-}
-
-.to-green-500 {
-  --tw-gradient-to: #10b981;
-}
-
-.to-\[\#a17fe0\] {
-  --tw-gradient-to: #a17fe0;
-}
-
-.to-\[\#5D26C1\] {
-  --tw-gradient-to: #5D26C1;
-}
-
-.to-\[\#EB5757\] {
-  --tw-gradient-to: #EB5757;
-}
-
-.to-yellow-600 {
-  --tw-gradient-to: #d97706;
-}
-
-.to-\[\#db36a4\] {
-  --tw-gradient-to: #db36a4;
-}
-
-.to-\[\#ED8F03\] {
-  --tw-gradient-to: #ED8F03;
-}
-
-.to-\[\#c21500\] {
-  --tw-gradient-to: #c21500;
-}
-
-.to-\[\#994e45\] {
-  --tw-gradient-to: #994e45;
-}
-
-.to-\[\#d69967\] {
-  --tw-gradient-to: #d69967;
-}
-
-.to-\[\#ff7e5f\] {
-  --tw-gradient-to: #ff7e5f;
-}
-
-.to-green-300 {
-  --tw-gradient-to: #6ee7b7;
-}
-
-.to-\[\#fa709a\] {
-  --tw-gradient-to: #fa709a;
-}
-
-.to-\[\#667eea\] {
-  --tw-gradient-to: #667eea;
-}
-
-.to-\[\#e4648a\] {
-  --tw-gradient-to: #e4648a;
-}
-
-.to-\[\#d6537a\] {
-  --tw-gradient-to: #d6537a;
-}
-
-.to-\[\#f3618d\] {
-  --tw-gradient-to: #f3618d;
-}
-
-.to-\[\#f16690\] {
-  --tw-gradient-to: #f16690;
-}
-
-.to-\[\#C33764\] {
-  --tw-gradient-to: #C33764;
-}
-
-.to-purple-900 {
-  --tw-gradient-to: #4c1d95;
-}
-
-.bg-clip-border {
-  background-clip: border-box;
+.to-yellow-100 {
+  --tw-gradient-to: #fef3c7;
 }
 
 .bg-clip-text {
@@ -1800,10 +1417,6 @@ video {
 
 .p-3 {
   padding: 0.75rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-6 {
@@ -1937,6 +1550,22 @@ video {
   padding-bottom: 2rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1987,22 +1616,6 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
 }
 
 .text-left {
@@ -2137,6 +1750,11 @@ video {
   color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
+
 .text-\[\#EB5758\] {
   --tw-text-opacity: 1;
   color: rgba(235, 87, 88, var(--tw-text-opacity));
@@ -2165,61 +1783,6 @@ video {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-
-.text-green-500 {
-  --tw-text-opacity: 1;
-  color: rgba(16, 185, 129, var(--tw-text-opacity));
-}
-
-.text-pink-700 {
-  --tw-text-opacity: 1;
-  color: rgba(190, 24, 93, var(--tw-text-opacity));
-}
-
-.text-green-700 {
-  --tw-text-opacity: 1;
-  color: rgba(4, 120, 87, var(--tw-text-opacity));
-}
-
-.text-yellow-700 {
-  --tw-text-opacity: 1;
-  color: rgba(180, 83, 9, var(--tw-text-opacity));
-}
-
-.text-pink-300 {
-  --tw-text-opacity: 1;
-  color: rgba(249, 168, 212, var(--tw-text-opacity));
-}
-
-.text-green-300 {
-  --tw-text-opacity: 1;
-  color: rgba(110, 231, 183, var(--tw-text-opacity));
-}
-
-.text-yellow-300 {
-  --tw-text-opacity: 1;
-  color: rgba(252, 211, 77, var(--tw-text-opacity));
-}
-
-.text-pink-400 {
-  --tw-text-opacity: 1;
-  color: rgba(244, 114, 182, var(--tw-text-opacity));
-}
-
-.text-green-400 {
-  --tw-text-opacity: 1;
-  color: rgba(52, 211, 153, var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 
 .underline {
@@ -2383,11 +1946,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:drop-shadow-xl:hover {
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgba(0, 0, 0, 0.03)) drop-shadow(0 8px 5px rgba(0, 0, 0, 0.08));
-  filter: var(--tw-filter);
-}
-
 .active\:border-none:active {
   border-style: none;
 }
@@ -2514,8 +2072,8 @@ video {
   background-color: rgba(53, 53, 53, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
-  background-color: rgba(0,0,0,0.7);
+.dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
+  background-color: rgba(0,0,0,0.8);
 }
 
 .dark .dark\:bg-gray-400 {
@@ -2541,10 +2099,6 @@ video {
 .dark .dark\:bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
-  background-color: rgba(0,0,0,0.8);
 }
 
 .dark .dark\:from-red-800 {
@@ -2579,11 +2133,6 @@ video {
 .dark .dark\:text-gray-600 {
   --tw-text-opacity: 1;
   color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 
 .dark .dark\:text-gray-500 {
@@ -2691,10 +2240,6 @@ video {
     height: 15rem;
   }
 
-  .md\:h-6 {
-    height: 1.5rem;
-  }
-
   .md\:w-52 {
     width: 13rem;
   }
@@ -2703,16 +2248,12 @@ video {
     width: 100%;
   }
 
-  .md\:w-\[60\%\] {
-    width: 60%;
-  }
-
   .md\:w-\[35rem\] {
     width: 35rem;
   }
 
-  .md\:w-6 {
-    width: 1.5rem;
+  .md\:w-\[60\%\] {
+    width: 60%;
   }
 
   .md\:max-w-sm {
@@ -2735,10 +2276,6 @@ video {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:items-end {
@@ -2862,42 +2399,6 @@ video {
     left: 12rem;
   }
 
-  .lg\:left-52 {
-    left: 13rem;
-  }
-
-  .lg\:left-64 {
-    left: 16rem;
-  }
-
-  .lg\:left-60 {
-    left: 15rem;
-  }
-
-  .lg\:left-\[20rem\] {
-    left: 20rem;
-  }
-
-  .lg\:left-\[10rem\] {
-    left: 10rem;
-  }
-
-  .lg\:left-\[15rem\] {
-    left: 15rem;
-  }
-
-  .lg\:left-\[14rem\] {
-    left: 14rem;
-  }
-
-  .lg\:left-\[14\.4rem\] {
-    left: 14.4rem;
-  }
-
-  .lg\:left-\[14\.6rem\] {
-    left: 14.6rem;
-  }
-
   .lg\:left-\[14\.7rem\] {
     left: 14.7rem;
   }
@@ -2924,14 +2425,6 @@ video {
 
   .lg\:w-\[10rem\] {
     width: 10rem;
-  }
-
-  .lg\:w-\[40rem\] {
-    width: 40rem;
-  }
-
-  .lg\:w-\[35rem\] {
-    width: 35rem;
   }
 
   .lg\:scale-100 {
